Update show in posts view to render post and user Id proberlly

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,1 @@
-<p>Here is post ##{params[:id]} for user ##{params[:user_id]}</p>
+<p>Here is post #<%= params[:id] %> for user #<%= params[:user_id] %></p>
