--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,16 @@
-<p>Here is a list of users</p>
+<h1>All Users</h1>
+
+<table>
+  <tr>
+    <th>Photo</th>
+    <th>User Name</th>
+    <th>Number of Posts</th>
+  </tr>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= image_tag user.photo %></td>
+      <td><%= link_to user.name, user_path(user) %></td>
+      <td><%= user.posts.count %></td>
+    </tr>
+  <% end %>
+</table>
