--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,22 @@
-<p>Here is the profile for user #<%= params[:id] %></p>
+<h1>User Profile</h1>
+
+<div>
+  <h2><%= @user.name %></h2>
+  <p>Number of Posts: <%= @user.posts.count %></p>
+</div>
+
+<div>
+  <h3>Bio</h3>
+  <p><%= @user.bio %></p>
+</div>
+
+<h3>User's Posts</h3>
+<% @user.posts.each do |post| %>
+  <div>
+    <h4>Post Number: <%= post.id %></h4>
+    <p><%= post.text %></p>
+    <p>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></p>
+  </div>
+<% end %>
+
+<%= link_to 'See all posts', user_posts_path(@user) %>
