Add links at bottom to make navigation easy for user

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,5 +20,6 @@
   </div>
 <% end %>
 
+<%= link_to "Home", users_path %>
 <%= link_to 'Back', user_path(@user) %>
 <%= link_to 'See all posts', user_posts_path(@user) %>
