--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,14 +1,20 @@
-table {
-  width: 100%;
-  border-collapse: collapse;
+.users {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 5rem;
 }
 
-th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+.user-info {
+  display: flex;
+  gap: 1.5rem;
 }
 
-th {
-  background-color: #f2f2f2;
+.user-image {
+  padding: 2rem;
+  max-width: 100px;
+}
+
+.post-num {
+  align-self: flex-end;
 }
