--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 <div class="user-bio">
   <% @user.recent_posts.each do |post| %>
     <div>
-      <h4>Post Number: <%= post.id %></h4>
+      <h4>Post Number: <%= link_to post.title, user_post_path(@user, post) %> <%= post.id %></h4>
       <p><%= post.text %></p>
       <p class="to-left">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></p>
     </div>
