--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -34,3 +34,16 @@
   text-align: right;
   padding-right: 1rem;
 }
+
+.comments {
+  border: 1px solid #000;
+  padding: 2rem 0.5rem;
+  list-style-type: none;
+}
+
+.bottom-nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  padding: 2rem 0;
+}
