--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,5 +16,7 @@
   <% end %>
 </ul>
 
-<%= link_to "Home", users_path %>
-<%= link_to 'Back', user_path(@user) %>
+<div class="bottom-nav">
+  <%= link_to "Home", users_path %>
+  <%= link_to 'Back', user_path(@user) %>
+</div>
