--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,5 +21,7 @@
   <% end %>
 </div>
 
-<%= link_to "Home", users_path %>
-<%= link_to 'See all posts', user_posts_path(@user) %>
+<div class="bottom-nav">
+  <%= link_to "Home", users_path %>
+  <%= link_to 'See all posts', user_posts_path(@user) %>
+</div>
