--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,16 @@
-<p>Here is post #<%= params[:id] %> for user #<%= params[:user_id] %></p>
-
-<h1>Post Details</h1>
-
-<div>
+<div class="user-bio">
   <h2>Post #<%= @post.id %> by <%= @user.name %></h2>
-  <p>Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
+  <p class="stat-count">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
+  <p><%= @post.text %></p>
 </div>
 
-<p><%= @post.text %></p>
-
-<h3>Comments:</h3>
-<ul>
-  <% @post.comments.each do |comment| %>
-    <li><%= "#{comment.author.name}: #{comment.text}" %></li>
-  <% end %>
-</ul>
+<div class="user-bio comt">
+  <ul>
+    <% @post.comments.each do |comment| %>
+      <li><%= "#{comment.author.name}: #{comment.text}" %></li>
+    <% end %>
+  </ul>
+</div>
 
 <div class="bottom-nav">
   <%= link_to "Home", users_path %>
