Add style for liek and comment

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -57,3 +57,11 @@
 .comt ul {
   list-style-type: none;
 }
+
+.reaction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  padding-top: 1rem;
+}
