Update placeholder for user photo

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% @users.each do |user| %>
   <div class="users">
-    <div class="user-image">Image</div>
+    <div class="user-image">UserPHoto</div>
     <div class="user-info">
       <div>
         <h2><%= link_to user.name, user_path(user) %></h2>
