Add authenticate_user before start using the blog app

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="users">
-  <div class="user-image"><%= image_tag @user.photo %></div>
+  <div class="user-image">Image</div>
   <div class="user-info">
     <h2><%= @user.name %></h2>
     <p class="post-num">Number of Posts: <%= @user.posts.count %></p>
