--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,21 @@
   </div>
 </div>
 
+<div class="post-form">
+  <%= form_with(model: [@user, @user.posts.build], url: user_posts_path(@user)) do |form| %>
+    <div class="form-group">
+      <%= form.label :title, class: "control-label" %>
+      <%= form.text_field :title, class: "form-control", placeholder: "Enter post title" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :text, class: "control-label" %>
+      <%= form.text_area :text, class: "form-control", placeholder: "Enter post text" %>
+    </div>
+    <%= form.submit "Add Post", class: "btn btn-primary" %>
+  <% end %>
+</div>
+
+
 <div class="user-bio">
   <h3>Bio</h3>
   <p><%= @user.bio %></p>
