--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,9 @@
   <h2>Post #<%= @post.id %> by <%= @user.name %></h2>
   <p class="stat-count">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
   <p><%= @post.text %></p>
+  <% if can?(:destroy, @post) %>
+    <%= link_to 'Delete', user_post_path(@user, @post), method: :delete%>
+  <% end %>
 </div>
 
 <div class="user-bio comt">
