--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,14 +3,20 @@
   <p class="stat-count">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
   <p><%= @post.text %></p>
   <% if can?(:destroy, @post) %>
-    <%= link_to 'Delete', user_post_path(@user, @post), method: :delete%>
+    <%= button_to 'Delete', user_post_path(@user, @post), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' }, class: 'btn btn-danger' %>
   <% end %>
+
 </div>
 
 <div class="user-bio comt">
   <ul>
     <% @post.comments.each do |comment| %>
       <li><%= "#{comment.author.name}: #{comment.text}" %></li>
+      <li>
+        <% if can?(:destroy, comment) %>
+          <%= button_to 'Delete', user_post_comment_path(comment.post.author, comment.post, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: 'btn btn-danger' %>
+        <% end %>    
+      </li>
     <% end %>
   </ul>
 </div>
